--- a/htmlPages/EventWebSite/homepage.html
+++ b/htmlPages/EventWebSite/homepage.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="news" class="basic">
-        <p style="text-align: center;"></p>
+        <h3>Announcements</h3>
         <ul>
             {% for n in news %}
             <li><a href="{{n.hyperlink}}">{{n.news_content}}</a></li>
@@ -32,7 +32,7 @@
     <div class="aboutus_title" id="aboutus4">
         <p id="aboutus">About Us</p>
 
-        <p id="aboutus_content" style="font-size: 25px; color:black">NU-TECH is the National Level technical fest of Institute of Technology, Nirma University. With a view to promote the "SHAURYA". The NU-TECH 2019 is a platform, Where students are given an opportunity to explore themselves.</p>
+        <p id="aboutus_content">NU-TECH is the National Level technical fest of Institute of Technology, Nirma University. With a view to promote the "SHAURYA". The NU-TECH 2019 is a platform, Where students are given an opportunity to explore themselves.</p>
 
     </div>
     <br>
