--- a/htmlPages/EventWebSite/login.html
+++ b/htmlPages/EventWebSite/login.html
@@ -43,9 +43,9 @@
                     </div>
                 </form>
 
-                <div class="first_time_login_container" id="first_time_login_container">
+                <!-- <div class="first_time_login_container" id="first_time_login_container">
                     <p id="first_time_login" class="first_time_login">If you are signing in first time, then <a href="" id="first_time_login_link" class="first_time_login">click here</a></p>
-                </div>
+                </div> -->
          </div>
 
          <div class="reg_btn_container" id="reg_btn_container">
