--- a/htmlPages/EventWebSite/profile.html
+++ b/htmlPages/EventWebSite/profile.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div >
+<div id="profile_main">
     <div class="detail_container">
         <p id="reg_no" class="attribute">Registration No : </p>
         <p id="reg_no_value" class="value">{{userinfo.reg_no}}</p>
