--- a/htmlPages/EventHead/eventHead_login.html
+++ b/htmlPages/EventHead/eventHead_login.html
@@ -19,27 +19,30 @@
         
                 <form method="POST">
                     {% csrf_token %}
-                    <div id="username" class="inputbox">
-                        <input type="text" name="email" value="{{ email }}" required="required">
-                        <label>Email ID</label>
+                    <div id="username" class="inputbox innerbox">
+                        <input type="text" name="email" {% if email %} value="{{ email }}" {% else %} value="robert.downey.jr@gmail.com" {% endif %} required="required">
+                        <label>Email Id</label>
                     </div>
         
-                    <div id="password" class="inputbox">
-                        <input type="password" name="password" required="required">
+                    <div id="password" class="inputbox innerbox">
+                        <input type="password" name="password" value="manage@123" required="required">
                         <label>Password</label>
                     </div>
+                    <div id="errormsg" class="innerbox">
+                        <p>Default email and password are provided for Demo purpose</p>
                     {% if message %}
-                    <div id="errormsg">
                         <p>{{ message }}</p>
-                    </div>
                     {% endif %}
-                    <div>
-                        <div id="submit_btn_container">
-                            <input type="submit" value="SIGN IN" id="submit_btn">
-                        </div>
+                    </div>
+                    <div class="innerbox">                        
+                        <button type="submit">Sign In</button>
                     </div>
                 </form>
-
          </div>
+         <div class="outbtn_container">
+            <button class="form_btn">
+                <a href="{% url 'eventCommittee' %}">Back To Administrative Login</a>
+            </button>
+        </div>
 </body>
 </html>
