--- a/htmlPages/EventWebSite/registration.html
+++ b/htmlPages/EventWebSite/registration.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block loadcss %}
-    <link rel="stylesheet" href="{% static 'css/registration.css' %}" type="text/css">  
+    <link rel="stylesheet" href="{% static 'css/EventWebSite/registration.css' %}" type="text/css">  
     <style>
         body{
             background-image: url("{% static 'media/nirma_bck.jpg' %}");
