--- a/htmlPages/Administrator/administrator_login.html
+++ b/htmlPages/Administrator/administrator_login.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1141">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign In | NUTECH-2020</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
