--- a/htmlPages/Administrator/administrator_base.html
+++ b/htmlPages/Administrator/administrator_base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1141">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/comman.css'%}">
